concept 변경(retro)

--- a/p1.html
+++ b/p1.html
@@ -6,32 +6,29 @@
     <title>박현정의 포트폴리오</title>
     <link rel="shortcut icon" href="images/webcon.png" type="image/x-icon">
     <link rel="stylesheet" href="style/reset.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">    
     <link rel="stylesheet" href="style/p1.css">
 </head>
 <body class="scrollb">
     <nav id="nav">
-        <h1><a href="#">Colors</a></h1>
+        <h1><a href="#">HJ</a></h1>
         <div class="mNav">
             <div class="icon-wrap">
                 <div class="icon"></div>
             </div>
         </div>
-
         <ul class="menu">
             <li class="active"><a href="#section1">Home</a></li>
-            <li><a href="#section2">Skill</a></li>
+            <li><a href="#section2">About</a></li>
             <li><a href="#section3">Web</a></li>
             <li><a href="#section4">App</a></li>
-            <li><a href="#section5">About</a></li>
-            <li><a href="#section6">Contact</a></li>
+            <li><a href="#section5">Contact</a></li>
         </ul>
     </nav>
     <div id="contents">
         <div class="inner">
-            <div id="section1" class="panel" data-color="puff-1">
-                <h2 id="autoType">I could be red</h2>
+            <div id="section1">
+                <h2 id="autoType"></h2>
                 <div class="scroll-downs">
                     <div class="mousey">
                         <div class="scroller"></div>
@@ -39,8 +36,7 @@
                     <p>scroll</p>
                 </div>
             </div>
-            <div id="section2" class="panel" data-color="puff-2">
-                <h2>My skills</h2>
+            <div id="section2">
                 <div class="skill_box">
                     <div>
                         <div><span class="blind">HTML5 - 90%</span></div>
@@ -52,104 +48,82 @@
                         <div><span class="blind">JAVASCRIPT - 70%</span></div>
                     </div>
                     <div>
-                        <div><span class="blind">PS, AI- 70%</span></div>
+                        <div><span class="blind">Ps - 70%</span></div>
+                    </div>
+                    <div>
+                        <div><span class="blind">Ai - 70%</span></div>
                     </div>
                     <div>
                         <div><span class="blind">XD - 70%</span></div>
                     </div>
                 </div>
             </div>
-            <div id="section3" class="panel" data-color="puff-3">
-                <h2>Web project</h2>
+            <div id="section3">
                 <div class="window-container">
-                    <div class="row">
-                        <div class="column left">
-                            <span class="dot" style="background:#ED594A;"></span>
-                            <span class="dot" style="background:#FDD800;"></span>
-                            <span class="dot" style="background:#5AC05A;"></span>
-                        </div>
-                        <div class="column middle">
-                            <input type="text" value="http://Hyeonjeong's portfolio" readonly>
-                        </div>
-                        <div class="column right">
-                            <div style="float:right">
-                                <span class="bar"></span>
-                                <span class="bar"></span>
-                                <span class="bar"></span>
-                            </div>
+                    <div class="window-top">
+                        <div class="top-left">
+                            <span></span><span></span><span></span>
                         </div>
                     </div>
-                    <div class="main_visual">
-                        <ul class="visual_container">         
-                            <li class="mySlides fade"><span class="blind">셀로(Cello) 반응형 홈페이지(클론코딩)입니다</span><a href="https://puiux.kr/cello/cello" target="_blank" class="go_more">자세히 보기</a></li>
-                            <li class="mySlides fade"><span class="blind">DA 테크놀로지 적응형 홈페이지(클론코딩)입니다</span><a href="https://puiux.kr/dat/dat" target="_blank" class="go_more">자세히 보기</a></li>
-                            <li class="mySlides fade"><span class="blind">MNH 엔터테인먼트 적응형 홈페이지(클론코딩)입니다</span><a href="https://puiux.kr/mnh/mnh" target="_blank" class="go_more">자세히 보기</a></li>
-                            <li class="mySlides fade"><span class="blind">League of Legends(2019 KR) 적응형 홈페이지(클론코딩)입니다 </span><a href="https://puiux.kr/lol/lol" target="_blank" class="go_more">자세히 보기</a></li>
-                        </ul>
+                    <div class="work">
+                        <div class="cello">
+                        </div>
+                    </div>
+                    <div class="txt_head cello_head">
+                        <p>responsive</p>
+                        <h3>cello</h3>
                     </div>
                 </div><!--window-container-->
-                <ul class="slide_btn">
-                    <li class="prev" onclick="plusSlides(-1)"></li>
-                    <li class="next" onclick="plusSlides(1)"></li>
-                </ul>
+                <div class="window-container">
+                    <div class="window-top">
+                        <div class="top-left">
+                            <span></span><span></span><span></span>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <div class="dat">
+                        </div>
+                    </div>
+                    <div class="txt_head dat_head">
+                        <p>adaptive</p>
+                        <h3>DA Tech</h3>
+                    </div>
+                </div><!--window-container-->
+                <div class="window-container">
+                    <div class="window-top">
+                        <div class="top-left">
+                            <span></span><span></span><span></span>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <div class="mnh">
+                        </div>
+                    </div>
+                    <div class="txt_head mnh_head">
+                        <p>adaptive</p>
+                        <h3>MNH</h3>
+                    </div>
+                </div><!--window-container-->
+                <div class="window-container">
+                    <div class="window-top">
+                        <div class="top-left">
+                            <span></span><span></span><span></span>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <div class="lol">
+                        </div>
+                    </div>
+                    <div class="txt_head lol_head">
+                        <p>adaptive</p>
+                        <h3>LOL</h3>
+                    </div>
+                </div><!--window-container-->
             </div>
-            <div id="section4" class="panel" data-color="puff-4">
+            <div id="section4">
                 <h2>App Design</h2>
             </div>
-            <div id="section5" class="panel" data-color="puff-5">
-                <div class="messenger">
-                    <div class="m1">
-                        <div class="w1">
-                            <p>퍼블리셔 박현정입니다! 궁금한 점을 물어봐주세요.</p>
-                        </div>
-                        <div class="w2">
-                            <p>안녕하세요... :)</p>
-                            <p>포트폴리오가 colorful하네요!</p>
-                        </div>
-                        <div class="w1">
-                            <p>저의 다양한 모습을 보려드리고 싶어서 꾸미게 되었습니다!</p>
-                        </div>
-                        <div class="w2">
-                            <p>요즘은 어떤 일을 하면서 보내고 계신가요?</p>
-                        </div>
-                        <div class="w1">
-                            <p>웹포스터를 만들며 취미생활을 즐기고 있어요</p>
-                        </div>
-                        <div class="w2">
-                            <p>어떤 게임포스터인지 궁금하네요!</p>
-                            <p>구경 할 수 있을까요?</p>
-                        </div>
-                        <div class="w1">
-                            <p>제가 만든 포스터들은 <a href="https://2rel.me">여기</a>서 보실 수 있습니다!</p>
-                        </div>
-                        <div class="w2">
-                            <p>네 재미있게 구경해보도록 하겠습니다</p>
-                        </div>
-                        <div class="type">
-                        </div>
-                    </div>
-                    <div class="m2">
-                        <div>
-                            <p class="park_photo"></p>
-                            <h3>Lena Park</h3>
-                            <p>Yatap, Seongnam-si</p>
-                        </div>
-                        <div>
-                            <p class="user_photo"></p>
-                            <h3>You</h3>
-                            <p>Korea</p>
-                        </div>
-                    </div>
-                    <div class="m3">
-                        <input type="text" placeholder="type a message...">
-                    </div>
-                </div>
-            </div>
-            <div id="section6" class="panel" data-color="puff-6">
-                <section></section><!--bricks-->
-                <div class="sign">
-                    <h2><span class="fast-flicker">H</span>yeon<span class="flicker">-J</span>eong</h2>
-                </div>
+            <div id="section5">
                 <div class="sns">
                     <p> - Github <a href="https://github.com/nadyungkr" target="_blank" class="flicker">nadyungkr</a></p>
                     <p> - Design-Blog <a href="https://2rel.me/" target="_blank" class="flicker">LoL Web-Poster</a></p>
