홈화면 수정(말풍선 추가)

--- a/p1.html
+++ b/p1.html
@@ -28,7 +28,9 @@
     <div id="contents">
         <div class="inner">
             <div id="section1">
-                <h2 id="autoType"></h2>
+                <div class="balloon">
+                    <h2 id="autoType"></h2>
+                </div>
                 <div class="scroll-downs">
                     <div class="mousey">
                         <div class="scroller"></div>
