--- a/p1.html
+++ b/p1.html
@@ -6,12 +6,17 @@
     <title>박현정의 포트폴리오</title>
     <link rel="shortcut icon" href="images/webcon.png" type="image/x-icon">
     <link rel="stylesheet" href="style/reset.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,700;1,700&display=swap">
     <link rel="stylesheet" href="style/p1.css">
 </head>
 <body class="scrollb">
     <nav id="nav">
-        <h1><a href="#">HJ</a></h1>
+        <h1 id="logo">
+            <a href="#">
+                로고임시
+            </a>
+        </h1>
         <div class="mNav">
             <div class="icon-wrap">
                 <div class="icon"></div>
@@ -28,8 +33,25 @@
     <div id="contents">
         <div class="inner">
             <div id="section1">
-                <div class="balloon">
-                    <h2 id="autoType"></h2>
+                <div class="post_box">
+                    <div class="post-it-note post_1">J <p></p></div>
+                    <div class="post-it-note post_2">E</div>
+                    <div class="post-it-note post_3">O</div>
+                    <div class="post-it-note post_4">N</div>
+                    <div class="post-it-note post_5">G</div>
+                    <div class="post-it-note post_6">
+                        <?xml version="1.0" encoding="utf-8"?>
+                        <!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                            viewBox="0 0 78 68" style="enable-background:new 0 0 78 68;" xml:space="preserve">
+                        <path class="st0" d="M36.5,17.5c0.34-0.63,7.8-14,19-14c8,0,12,3,13,8c2.77,13.87-28,47-28,47s-38-30-34-46c1.35-5.39,7.29-9,14-9
+                            C26.5,3.5,34.1,10.43,36.5,17.5z"/>
+                        </svg>
+                    </div>
+                </div><!--post box-->
+                <div class="fixed_post">
+                    <div class="post_7"><img src="../images/webcon.png" alt="박현정 SD 캐릭터 스티커"></div>
+                    <div class="post_8"><img src="../images/webcon2.png" alt="박현정 SD 캐릭터 스티커2"></div>
                 </div>
                 <div class="scroll-downs">
                     <div class="mousey">
@@ -39,24 +61,93 @@
                 </div>
             </div>
             <div id="section2">
-                <div class="skill_box">
-                    <div>
-                        <div><span class="blind">HTML5 - 90%</span></div>
+                <div class="skill_box s1">
+                    <button class="skill_btn">Character</button>
+                    <div class="panel">
+                        <section>
+                            <h3>Responsibility</h3>
+                            <p>프로젝트 끝날 때까지 뼈를 묻는 성격</p>
+                        </section>
+                        <section>
+                            <h3>Joyful</h3>
+                            <p>매사를 즐겁게! Joyful! Joypark!</p>
+                        </section>
+                        <section>
+                            <h3>Energetic</h3>
+                            <p>열정이 넘치는 나! 박렬정!</p>
+                        </section>
                     </div>
-                    <div>
-                        <div><span class="blind">CSS3 - 90%</span></div>
+                </div>
+                <div class="skill_box s2">
+                    <button class="skill_btn">Skill</button>
+                    <div class="panel">
+                        <section>
+                            <h3>HTML</h3>
+                            <p></p>
+                        </section>
+                        <section>
+                            <h3>CSS</h3>
+                            <p></p>
+                        </section>
+                        <section>
+                            <h3>JS</h3>
+                            <p></p>
+                        </section>
+                        <section>
+                            <h3>Jquery</h3>
+                            <p></p>
+                        </section>
+                        <section>
+                            <h3>Ps/Ai</h3>
+                            <p></p>
+                        </section>
+                        <section>
+                            <h3>XD</h3>
+                            <p></p>
+                        </section>
                     </div>
-                    <div>
-                        <div><span class="blind">JAVASCRIPT - 70%</span></div>
+                </div>
+                <div class="skill_box s3">
+                    <button class="skill_btn">Education</button>
+                    <div class="panel">
+                        <section>
+                            <h3>웹퍼블리셔 과정 수료(그린아카데미)</h3>
+                            <p>2020. 02</p>
+                        </section>
+                        <section>
+                            <h3>유아교육과 졸업(대전보건대학)</h3>
+                            <p>2018. 02</p>
+                        </section>
+                        <section>
+                            <h3>기술과학 과정 졸업(해남고등학교)</h3>
+                            <p>2015. 02</p>
+                        </section>
                     </div>
-                    <div>
-                        <div><span class="blind">Ps - 70%</span></div>
+                </div>
+                <div class="skill_box s4">
+                    <button class="skill_btn">License</button>
+                    <div class="panel">
+                        <section>
+                            <h3>GTQ 1급</h3>
+                            <p>2019. 10</p>
+                        </section>
+                        <section>
+                            <h3>운전면허 2종</h3>
+                            <p>2019. 02</p>
+                        </section>
                     </div>
-                    <div>
-                        <div><span class="blind">Ai - 70%</span></div>
-                    </div>
-                    <div>
-                        <div><span class="blind">XD - 70%</span></div>
+                </div>
+                <div class="skill_box s5">
+                    <button class="skill_btn">Blog</button>
+                    <div class="panel">
+                        <section>
+                            <h3>1일 1커밋</h3>
+                            <p><a href="https://github.com/nadyungkr" target="_blank">Github - @nadyungkr</a></p>
+                        </section>
+                        <section>
+                            <h3>LoL gallery</h3>
+                            <p><a href="https://2rel.me/" target="_blank">Web Poster</a></p>
+                        </section>
                     </div>
                 </div>
             </div>
@@ -123,16 +214,17 @@
                 </div><!--window-container-->
             </div>
             <div id="section4">
-                <h2>App Design</h2>
             </div>
             <div id="section5">
                 <div class="sns">
                     <p> - Github <a href="https://github.com/nadyungkr" target="_blank" class="flicker">nadyungkr</a></p>
                     <p> - Design-Blog <a href="https://2rel.me/" target="_blank" class="flicker">LoL Web-Poster</a></p>
                     <p> - E-mail <a href="mailto:puiux@kakao.com" class="flicker">puiux@kakao.com</a></p>
+                    <!--사진은 폴라로이드-->
                 </div>
             </div>
-        </div><!--inner-->
+        
+        </><!--inner-->
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
