메인화면 줄간격 조정

--- a/p1.html
+++ b/p1.html
@@ -48,11 +48,9 @@
                             C26.5,3.5,34.1,10.43,36.5,17.5z"/>
                         </svg>
                     </div>
-                </div><!--post box-->
-                <div class="fixed_post">
                     <div class="post_7"><img src="../images/webcon.png" alt="박현정 SD 캐릭터 스티커"></div>
                     <div class="post_8"><img src="../images/webcon2.png" alt="박현정 SD 캐릭터 스티커2"></div>
-                </div>
+                </div><!--post box-->
                 <div class="scroll-downs">
                     <div class="mousey">
                         <div class="scroller"></div>
@@ -142,11 +140,13 @@
                     <div class="panel">
                         <section>
                             <h3>1일 1커밋</h3>
-                            <p><a href="https://github.com/nadyungkr" target="_blank">Github - @nadyungkr</a></p>
+                            <p></p>
+                            <p style="display: block;"><a href="https://github.com/nadyungkr" target="_blank">Github - @nadyungkr</a></p>
                         </section>
                         <section>
                             <h3>LoL gallery</h3>
-                            <p><a href="https://2rel.me/" target="_blank">Web Poster</a></p>
+                            <p></p>
+                            <p style="display: block;"><a href="https://2rel.me/" target="_blank">Web Poster</a></p>
                         </section>
                     </div>
                 </div>
