skill contents 완성

--- a/p1.html
+++ b/p1.html
@@ -48,14 +48,16 @@
                             C26.5,3.5,34.1,10.43,36.5,17.5z"/>
                         </svg>
                     </div>
+                </div><!--post box-->
+                <div class="fixed_post">
                     <div class="post_7"><img src="../images/webcon.png" alt="박현정 SD 캐릭터 스티커"></div>
                     <div class="post_8"><img src="../images/webcon2.png" alt="박현정 SD 캐릭터 스티커2"></div>
-                </div><!--post box-->
+                </div>
                 <div class="scroll-downs">
                     <div class="mousey">
                         <div class="scroller"></div>
                     </div>
-                    <p>scroll</p>
+                    <p>scroll down</p>
                 </div>
             </div>
             <div id="section2">
@@ -63,15 +65,15 @@
                     <button class="skill_btn">Character</button>
                     <div class="panel">
                         <section>
-                            <h3>Responsibility</h3>
+                            <h3 class="c1">Responsibility</h3>
                             <p>프로젝트 끝날 때까지 뼈를 묻는 성격</p>
                         </section>
                         <section>
-                            <h3>Joyful</h3>
+                            <h3 class="c2">Joyful</h3>
                             <p>매사를 즐겁게! Joyful! Joypark!</p>
                         </section>
                         <section>
-                            <h3>Energetic</h3>
+                            <h3 class="c3">Energetic</h3>
                             <p>열정이 넘치는 나! 박렬정!</p>
                         </section>
                     </div>
@@ -80,28 +82,28 @@
                     <button class="skill_btn">Skill</button>
                     <div class="panel">
                         <section>
-                            <h3>HTML</h3>
-                            <p></p>
+                            <h3>Semantic Tag</h3>
+                            <p>정확한 컨텐츠의 식별을 위해 사용</p>
                         </section>
                         <section>
-                            <h3>CSS</h3>
-                            <p></p>
+                            <h3>Responsive Web</h3>
+                            <p>어디서 봐도 예쁜 반응형 웹의 경험</p>
                         </section>
                         <section>
-                            <h3>JS</h3>
-                            <p></p>
+                            <h3>Trouble Shooter</h3>
+                            <p>코딩은 디버깅으로, 프로젝트는 적극적 의사소통과 참여로</p>
                         </section>
                         <section>
-                            <h3>Jquery</h3>
-                            <p></p>
+                            <h3>Git/Github</h3>
+                            <p>개발 능률의 향상을 위해 VSCode와의 연동, 기록과 백업</p>
                         </section>
                         <section>
-                            <h3>Ps/Ai</h3>
-                            <p></p>
+                            <h3>Ps/Ai/Xd</h3>
+                            <p>다양한 편집툴(tool) 사용에 능숙</p>
                         </section>
                         <section>
-                            <h3>XD</h3>
-                            <p></p>
+                            <h3>Keep at it</h3>
+                            <p>정말로 하고 싶은 일을 열정을 가지고 계속하는 자세</p>
                         </section>
                     </div>
                 </div>
@@ -139,14 +141,12 @@
                     <button class="skill_btn">Blog</button>
                     <div class="panel">
                         <section>
-                            <h3>1일 1커밋</h3>
-                            <p></p>
-                            <p style="display: block;"><a href="https://github.com/nadyungkr" target="_blank">Github - @nadyungkr</a></p>
+                            <h3><a href="https://github.com/nadyungkr">1일 1커밋</a></h3>
+                            <p>CSS3, SVG, Animation, Javascript Study, Vue.js, Javascript Framework</p>
                         </section>
                         <section>
-                            <h3>LoL gallery</h3>
-                            <p></p>
-                            <p style="display: block;"><a href="https://2rel.me/" target="_blank">Web Poster</a></p>
+                            <h3><a href="https://2rel.me/about">LoL Blog</a></h3>
+                            <p>League of Legends Game LOL Poster gallery</p>
                         </section>
                     </div>
                 </div>
