--- a/p1.html
+++ b/p1.html
@@ -216,15 +216,28 @@
             <div id="section4">
             </div>
             <div id="section5">
-                <div class="sns">
-                    <p> - Github <a href="https://github.com/nadyungkr" target="_blank" class="flicker">nadyungkr</a></p>
-                    <p> - Design-Blog <a href="https://2rel.me/" target="_blank" class="flicker">LoL Web-Poster</a></p>
-                    <p> - E-mail <a href="mailto:puiux@kakao.com" class="flicker">puiux@kakao.com</a></p>
-                    <!--사진은 폴라로이드-->
+                <div class="contactImg">
+                    <div class="polaroid">
+                        <img src="images/me.jpg" alt="귀여운 나">
+                    </div>
+                    <div class="polaroid">
+                        <img src="images/me.jpg" alt="귀여운 나">
+                    </div>
+                    <div class="polaroid">
+                        <img src="images/me.jpg" alt="귀여운 나">
+                    </div>
+                    <div class="polaroid">
+                        <img src="images/me.jpg" alt="귀여운 나">
+                    </div>
+                    <div class="polaroid">
+                        <img src="images/me.jpg" alt="귀여운 나">
+                    </div>
+                </div>
+                <div class="contact">
+                    <h3>contact me</h3>
                 </div>
             </div>
-        
-        </><!--inner-->
+        </div><!--inner-->
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
