form contact section design 완성

--- a/p1.html
+++ b/p1.html
@@ -235,6 +235,18 @@
                 </div>
                 <div class="contact">
                     <h3>contact me</h3>
+                    <form action="" method="">
+                        <fieldset>
+                            <legend class="blind">Mail To</legend>
+                            <label for="name">Name</label>
+                            <input type="text" id="name" required />
+                            <label for="email">E-mail</label>
+                            <input type="email" id="email" required />
+                            <label for="textarea">Inquiry</label> 
+                            <textarea id="textarea" rows="8"></textarea>
+                            <input type="submit" class="submit" value="Submit">
+                        </fieldset>
+                    </form>
                 </div>
             </div>
         </div><!--inner-->
