이미지 이름 변경, form 전송 시 확인 메세지 완성

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>박현정의 포트폴리오</title>
-    <link rel="shortcut icon" href="images/webcon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/nadyung_woman_sd_character.png" type="image/x-icon">
     <link rel="stylesheet" href="style/reset.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,700;1,700&display=swap">
-    <link rel="stylesheet" href="style/p1.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="scrollb">
     <nav id="nav">
@@ -34,7 +34,7 @@
         <div class="inner">
             <div id="section1">
                 <div class="post_box">
-                    <div class="post-it-note post_1">J <p></p></div>
+                    <div class="post-it-note post_1">J</div>
                     <div class="post-it-note post_2">E</div>
                     <div class="post-it-note post_3">O</div>
                     <div class="post-it-note post_4">N</div>
@@ -50,8 +50,8 @@
                     </div>
                 </div><!--post box-->
                 <div class="fixed_post">
-                    <div class="post_7"><img src="../images/webcon.png" alt="박현정 SD 캐릭터 스티커"></div>
-                    <div class="post_8"><img src="../images/webcon2.png" alt="박현정 SD 캐릭터 스티커2"></div>
+                    <div class="post_7"><img src="images/nadyung_man_sd_character.png" alt="박현정 제작 나듕 남자 SD 캐릭터 스티커"></div>
+                    <div class="post_8"><img src="images/nadyung_woman_sd_character.png" alt="박현정 제작 나듕 여자 SD 캐릭터 스티커2"></div>
                 </div>
                 <div class="scroll-downs">
                     <div class="mousey">
@@ -218,16 +218,16 @@
             <div id="section5">
                 <div class="contactImg">
                     <div class="polaroid">
-                        <img src="images/me.jpg" alt="귀여운 나">
+                        <img src="images/lovely_lena_1.jpg" alt="귀여운 레나(박현정) 폴라로이드">
                     </div>
                     <div class="polaroid">
-                        <img src="images/me.jpg" alt="귀여운 나">
+                        <img src="images/lovely_lena_2.jpg" alt="귀여운 레나(박현정) 폴라로이드">
                     </div>
                     <div class="polaroid">
-                        <img src="images/me.jpg" alt="귀여운 나">
+                        <img src="images/lovely_lena_3.jpg" alt="귀여운 레나(박현정) 폴라로이드">
                     </div>
                     <div class="polaroid">
-                        <img src="images/me.jpg" alt="귀여운 나">
+                        <img src="images/lovely_lena_4.jpg" alt="귀여운 레나(박현정) 폴라로이드">
                     </div>
                 </div>
                 <div class="contact">
@@ -244,6 +244,9 @@
                             <textarea id="textarea" rows="5" placeholder="your message..." name="message"></textarea>
                             <button>SUBMIT</button>
                         </fieldset>
+                            <div style="display: none;" class="thankyou_message"> 
+                                <p>🤝감사합니다. 곧 다시 연락드리겠습니다.</p>
+                            </div>
                         <fieldset class="honeypot-field hidden">
                             <label for="honeypot">To help avoid spam, utilize a Honeypot technique with a hidden text field; must be empty to submit the form! Otherwise, we assume the user is a spam bot.</label>
                             <input id="honeypot" type="text" name="honeypot" value="" />
@@ -255,7 +258,7 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script data-cfasync="false" src="form-submission-handler.js"></script>
-    <script src="p1.js"></script>
+    <script data-cfasync="false" src="js/form-submission-handler.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
