css로 귀여운 휴대폰 만들기 + svg 움직이는 표정

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="contents">
         <div class="inner">
             <div id="section1">
-                <div class="post_box">
+                <div style="outline: 10px solid orange" class="post_box">
                     <div class="post-it-note post_1">J</div>
                     <div class="post-it-note post_2">E</div>
                     <div class="post-it-note post_3">O</div>
@@ -47,12 +47,10 @@
                         <path class="st0" d="M36.5,17.5c0.34-0.63,7.8-14,19-14c8,0,12,3,13,8c2.77,13.87-28,47-28,47s-38-30-34-46c1.35-5.39,7.29-9,14-9
                             C26.5,3.5,34.1,10.43,36.5,17.5z"/>
                         </svg>
+                        <div class="post-it-note post_7"><img src="images/nadyung_man_sd_character.png" alt="박현정 제작 나듕 남자 SD 캐릭터 스티커"></div>
+                        <div class="post-it-note post_8"><img src="images/nadyung_woman_sd_character.png" alt="박현정 제작 나듕 여자 SD 캐릭터 스티커2"></div>
                     </div>
                 </div><!--post box-->
-                <div class="fixed_post">
-                    <div class="post_7"><img src="images/nadyung_man_sd_character.png" alt="박현정 제작 나듕 남자 SD 캐릭터 스티커"></div>
-                    <div class="post_8"><img src="images/nadyung_woman_sd_character.png" alt="박현정 제작 나듕 여자 SD 캐릭터 스티커2"></div>
-                </div>
                 <div class="scroll-downs">
                     <div class="mousey">
                         <div class="scroller"></div>
@@ -159,12 +157,11 @@
                         </div>
                     </div>
                     <div class="work">
-                        <div class="cello">
+                        <div class="clone cello">
                         </div>
                     </div>
                     <div class="txt_head cello_head">
-                        <p>responsive</p>
-                        <h3>cello</h3>
+                        <p><strong>adaptive</strong><br/>Cello</p>
                     </div>
                 </div><!--window-container-->
                 <div class="window-container">
@@ -174,12 +171,11 @@
                         </div>
                     </div>
                     <div class="work">
-                        <div class="dat">
+                        <div class="clone dat">
                         </div>
                     </div>
                     <div class="txt_head dat_head">
-                        <p>adaptive</p>
-                        <h3>DA Tech</h3>
+                        <p><strong>adaptive</strong><br/>DA tech</p>
                     </div>
                 </div><!--window-container-->
                 <div class="window-container">
@@ -189,12 +185,11 @@
                         </div>
                     </div>
                     <div class="work">
-                        <div class="mnh">
+                        <div class="clone mnh">
                         </div>
                     </div>
                     <div class="txt_head mnh_head">
-                        <p>adaptive</p>
-                        <h3>MNH</h3>
+                        <p><strong>adaptive</strong><br/>MNH</p>
                     </div>
                 </div><!--window-container-->
                 <div class="window-container">
@@ -204,16 +199,48 @@
                         </div>
                     </div>
                     <div class="work">
-                        <div class="lol">
+                        <div class="clone lol">
                         </div>
                     </div>
                     <div class="txt_head lol_head">
-                        <p>adaptive</p>
-                        <h3>LOL</h3>
+                        <p><strong>adaptive</strong><br/>LoL</p>
                     </div>
                 </div><!--window-container-->
             </div>
             <div id="section4">
+                <div class="app_container">
+                    <div class="phone_content">
+                        <div class="glass">
+                            <div class="camera"></div>
+                            <div class="screen">
+                                <div class="shot1"></div>
+                                <div class="shot2"></div>
+                                    <?xml version="1.0" encoding="utf-8"?>
+                                    <!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                        viewBox="0 0 32.2 28.5" style="enable-background:new 0 0 32.2 28.5;" xml:space="preserve">
+                                    <style type="text/css">
+                                        .st1{fill:none;stroke:#000000;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;}
+                                    </style>
+                                    <title>smile</title>
+                                    <g>
+                                        <path class="st1" d="M4.6,5.9c0.4-0.2,0.8-0.5,1-1c0.3-0.8-0.2-1.7-1-2s-1.7,0.2-2,1s0.2,1.7,1,2"/>
+                                        <path class="st1" d="M28.6,5.9c0.5-0.2,0.8-0.5,1-1c0.3-0.8-0.2-1.7-1-2s-1.7,0.2-2,1s0.2,1.7,1,2"/>
+                                    </g>
+                                    <path class="st1 mouth" d="M3.1,18.3c0,0,2,0,13.2,0s12.8,0,12.8,0"/>
+                                    </svg>
+
+
+                            </div>
+                            <div class="hold"></div>
+                        </div>
+                    </div>
+                </div>
+                <dl>
+                    <dt>APP Design</dt>
+                    <dd>Phone Model: IPhone X/XS</dd>
+                    <dd>수면을 돕는 앱</dd>
+                </dl>
             </div>
             <div id="section5">
                 <div class="contactImg">
@@ -244,7 +271,7 @@
                             <textarea id="textarea" rows="5" placeholder="your message..." name="message"></textarea>
                             <button>SUBMIT</button>
                         </fieldset>
-                            <div style="display: none;" class="thankyou_message"> 
+                            <div style="display: none" class="thankyou_message"> 
                                 <p>🤝감사합니다. 곧 다시 연락드리겠습니다.</p>
                             </div>
                         <fieldset class="honeypot-field hidden">
